@@ -50,7 +50,7 @@ experiment_names baseline,piecewise,gaussian
 # Indicate whether or not to run experiments on the parameters specified by
 # the [name]_params parameter.
 test_piecewise no
-test_baseline no
+test_baseline yes
 test_gaussian yes
 
 # Specify the parameters to experiment on for the different estimators and
@@ -70,7 +70,7 @@ baseline_type delay
 gaussian_type delay
 
 ######### parameters
-base_max_breakpoints 10,12
+base_max_breakpoints 15
 #base_pmf_threshold 0.05,0.07
 
 pc_max_extension 5,10
