@@ -4,6 +4,8 @@
 #include "struct.h"
 
 double_multi_arr* combine_functions(est_arr** estimates, double_arr* time_delay,
-				    double start, double interval_time, double step, int num_estimates);
+				    double start, double interval_time, double step,
+				    int num_estimates);
 double_multi_arr* combine_gauss_vectors(gauss_vector** V, double_arr* time_delay,
-					double start, double interval_time, double step, int num_vectors);
+					double start, double interval_time, double step,
+					double normaliser, int num_vectors);
